# ghostbbs

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
deploy/: ghostbbs.service
docs/: DEPLOY.md
ghostbbs/: __init__.py  config.py  doorgame.py  ghosts.py  llm.py  montagens.py  personas.py  server.py  session.py  store.py
tests/: test_ghostbbs.py
tools/: demo.py
